--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,30 @@ form p {
   font-weight: 500;
   font-size: 1.5em;
 }
+
+.ms_partners {
+  background-color: #f3f5f9;
+}
+
+.ms_partners h3 {
+  font-size: 1em;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: grey;
+}
+
+.ms_images {
+  height: 70px;
+  margin-bottom: 25px; 
+}
+
+.ms_images img {
+  height: 100%;
+  margin-right: 3%
+}
+
+.ms_images img:last-child {
+  height: 50%;
+  margin: 0 auto;
+  margin-right: none;
+}
