--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ li {
   list-style-type: none;
 }
 
+.ms_bg-grey {
+background-color: #f3f5f9;
+}
+
 .ms_wrapper75 {
   width: 75%;
   margin: 0 auto;
@@ -167,10 +171,6 @@ form p {
   font-size: 1.5em;
 }
 
-.ms_partners {
-  background-color: #f3f5f9;
-}
-
 .ms_partners .ms_privacy {
   margin-top: 3%;
 }
@@ -235,6 +235,30 @@ form p {
   border-left: 2px solid lightgrey;
 }
 
-.ms_top-main .ms_wrapper75 {
+.ms_top-main .ms_wrapper75, .ms_carosello .ms_wrapper75 {
   padding-bottom: 0;
+}
+
+.ms_carosello h2 {
+  font-weight: 700;
+}
+
+.ms_carosello h3 {
+ margin-bottom: 5%;
+ font-weight: 400;
+}
+
+.ms_box-image {
+  display: inline-block;
+  width: 40%;
+}
+
+.ms_carosello img {
+  width: 100%;
+  margin-bottom: 3%;
+}
+
+.ms_chevron {
+  font-size: 2em;
+  margin: 0 2%;
 }
