--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
  font-family: 'Roboto', sans-serif;
 }
 
+h2 {
+  font-weight: 700;
+}
+
 a {
   text-decoration: none;
 }
@@ -201,10 +205,6 @@ form p {
 }
 
 /* MAIN */
-.ms_top-main h2 {
-  font-weight: 700;
-}
-
 .ms_top-main h3 {
   font-weight: 400;
   line-height: 150%;
@@ -239,10 +239,6 @@ form p {
   padding-bottom: 0;
 }
 
-.ms_carosello h2 {
-  font-weight: 700;
-}
-
 .ms_carosello h3 {
  margin-bottom: 5%;
  font-weight: 400;
@@ -261,4 +257,96 @@ form p {
 .ms_chevron {
   font-size: 2em;
   margin: 0 2%;
+}
+
+.ms_chevron a {
+  text-decoration: none;
+}
+
+.ms_features span {
+  font-weight: 500;
+}
+
+.ms_features img {
+  display: block;
+  margin-bottom: 5%;
+  margin-top: 10%;
+}
+
+.ms_features p {
+  margin-top: 3%;
+}
+
+.ms_regions {
+  background-color: blue;
+  color: lightgrey;
+}
+
+.ms_regions table {
+  width: 100%;
+  margin-top: 5%;
+}
+
+.ms_regions h2 {
+  margin-bottom: 3%;
+  color: white;
+}
+
+.ms_regions table a {
+  color: #01d7d2;
+}
+
+.ms_regions table td {
+  line-height: 265%;
+}
+
+.ms_regions td:last-child {
+  text-align: right;
+}
+
+.ms_regions td:first-child {
+  color: white;
+}
+
+.ms_regions table tr {
+  border-bottom: 1px solid white;
+}
+
+.ms_regions table tr:last-child {
+  border-bottom: none;
+}
+
+.ms_secondo-carosello p {
+  font-weight: 500;
+}
+
+.ms_secondo-carosello h2 {
+  padding-bottom: 3%;
+}
+
+.ms_secondo-carosello a {
+  font-weight: 400;
+}
+
+.ms_secondo-carosello p:last-child {
+  margin: 8% 0;
+}
+
+.ms_secondo-carosello .ms_slide {
+  display: inline-block;
+  vertical-align: middle;
+  width: 40%;
+}
+
+.ms_secondo-carosello .ms_box-image {
+  display: inline-block;
+  width: 100%;
+  background-color: white;
+  padding: 5%;
+}
+
+.ms_secondo-carosello img {
+  width: 100%;
+  vertical-align: middle;
+  padding-top: 10%;
 }
