--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ form p {
   margin-top: 3%;
 }
 
-.ms_regions {
+.ms_regions , .ms_top-footer {
   background-color: blue;
   color: lightgrey;
 }
@@ -349,4 +349,61 @@ form p {
   width: 100%;
   vertical-align: middle;
   padding-top: 10%;
+}
+
+.ms_top-footer h2 {
+  color: white;
+  padding-bottom: 2%;
+}
+
+.ms_top-footer .ms_button {
+  padding: 1%;
+  font-size: 1.2em;
+  color: #0069ff;
+}
+
+.ms_bottom-footer {
+  background-color: #010e28;
+}
+
+.ms_bottom-footer span {
+  color: white;
+}
+
+.ms_bottom-footer img {
+  display: block;
+  margin-bottom: 2%;
+}
+
+.ms_bottom-footer p {
+  color: grey;
+  margin: 0;
+}
+
+.ms_bottom-footer .ms_icons li {
+  display: inline-block;
+  font-size: 1.3em;
+  margin-top: 2.5%;
+  margin-right: 2%;
+  margin-bottom: 3%;
+}
+
+.ms_bottom-footer li:first-child {
+  margin-top: 0.5%;
+}
+
+.ms_bottom-footer a , .ms_bottom-footer i {
+  color: grey;
+}
+
+.ms_bottom-footer li {
+  font-size: 0.95em;
+}
+
+/* MEDIA QUERY */
+@media screen and (max-width: 768px) {
+  .ms_bottom-footer [class*=col-] {
+    margin-bottom: 2%;
+    margin-left: 2%;
+  }
 }
