--- a/css/style.css
+++ b/css/style.css
@@ -201,23 +201,24 @@ form p {
   margin-bottom: 25px;
 }
 
+.ms_images {
+  display: flex; /* per far divenare flex-items i figli */
+  justify-content: center; /* per posizionare al centro il menu */
+}
+
 .ms_partners ul {
   margin: 0;
   padding: 0;
 }
 
 .ms_partners li {
+  flex-wrap: wrap; /*per far andare a capo le immagini nel responsive */
   display: inline-block;
   padding: 0 10px;
 }
 
 .ms_images img {
-  vertical-align: middle;
-  height: 70px;
-}
-
-.ms_images li:last-child img {
-  height: 35px;
+  width: 150px;
 }
 /* sponsor partners */
 /*************** HEADER ***************/
